objects/LLC_BI__Connection__c.object
<CustomObject>
    <description>The Connection Object is used to connect relationships together outside of entity involvement.  IE Parent and children relationships, spouses, etc.</description>
    <fields>
        <fullName>LLC_BI__Certifying_Individual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users manually populate this optional checkbox field. This field is used indicate whether the individual is a certifying individual. By default, this field is not checked.</description>
        <label>Certifying Individual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Connected_From__c</fullName>
        <description>This field is a look up field to relationships that serve as the &quot;connected from&quot; relationship.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connected_To</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Connected_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is a look up field to relationships that serve as the &quot;connected to&quot; relationship.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connected From</relationshipLabel>
        <relationshipName>Connected_From</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Connection_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup field to the connection role. This is used to specify the capacity of which two relationships are connected. (ie. Spouse, Parent, Child, Owner, Company, etc.)</description>
        <label>Role</label>
        <referenceTo>LLC_BI__Connection_Role__c</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Controlling_Individual__c</fullName>
        <description>Users manually populate this optional picklist field. This field is used to determine the role of the controlling individual. By default, it is blank.</description>
        <label>Controlling Individual</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Officer or Senior Manager</fullName>
                </value>
                <value>
                    <fullName>Other Person Performing Similar Function</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is a free form text field, used to enter in details/ description of the connection</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Indirect_Ownership_Percent__c</fullName>
        <description>Users manually populate this optional field. This field is used to capture the indirect ownership percentage.</description>
        <label>Indirect Ownership Percent</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Official_Title__c</fullName>
        <description>Users manually populate this optional text field. This field is used to indicate the official title of the Beneficial Owner.</description>
        <label>Official Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ownership_Percent__c</fullName>
        <description>Indicates the percentage of ownership.</description>
        <label>Ownership Percent</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reciprocal_Role__c</fullName>
        <description>Deprecated Field. no longer in use</description>
        <label>-D Reciprocal Role</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Role__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Connection</fullName>
                    <default>true</default>
                    <label>Connection</label>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Sibling</fullName>
                </value>
                <value>
                    <fullName>Spouse/Life Partner</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Business Partner</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Related</fullName>
                </value>
                <value>
                    <fullName>Affiliated Company</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Role__c</fullName>
        <description>Deprecated field, no longer in use</description>
        <label>-D Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Sibling</fullName>
                </value>
                <value>
                    <fullName>Spouse/Life Partner</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Business Partner</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Co-Owner</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Related</fullName>
                </value>
                <value>
                    <fullName>Officer</fullName>
                </value>
                <value>
                    <fullName>Affiliated Company</fullName>
                </value>
                <value>
                    <fullName>Connection</fullName>
                    <default>true</default>
                    <label>Connection</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is automatically populated via formula. It stores in plaintext the value of the LLC_BI__Status__c picklist from the relationship the &quot;connected to&quot; field is referencing.</description>
        <formula>Text(LLC_BI__Connected_To__r.LLC_BI__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Direct_Indirect_Ownership_Percent__c</fullName>
        <description>The system automatically populates this field with the sum of the direct and indirect ownership percentages.</description>
        <formula>LLC_BI__Ownership_Percent__c + LLC_BI__Indirect_Ownership_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Direct/Indirect Ownership Percent</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is a formula field, used to specify the type of relationship the &quot;connected to&quot; look-up is referring to.</description>
        <formula>TEXT(LLC_BI__Connected_To__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Auto-generated unique identifier for this connection.</description>
        <externalId>true</externalId>
        <inlineHelpText>Auto-generated unique identifier for this connection.</inlineHelpText>
        <label>UID</label>
        <length>54</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Connection</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Prevent_Edit_on_Connections</fullName>
        <active>true</active>
        <description>Deprecated, connections can be edited.</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>Connections are not editable.</errorMessage>
    </validationRules>
</CustomObject>